Convert HTML prototype to Hugo templates with Stripe integration - Remove theme dependency and fix CSS processing

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 baseURL = "https://wittleguys.net/"
 title = "Wittle Guys"
-theme = "tailbliss"
 languageCode = "en-us"
 
 [params]
@@ -39,8 +38,7 @@ languageCode = "en-us"
     url = "/contact/"
     weight = 3
 
-[params.assets]
-  custom_css = ["css/main.css"]
+# Assets are handled by Hugo's asset pipeline
 
 [markup]
   [markup.goldmark]
