--- a/wittleguys-backend/package.json
+++ b/wittleguys-backend/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "stripe": "^12.18.0",
+    "stripe": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.0",
+    "nodemailer": "^6.9.8"
   }
 } 
