--- a/wittleguys-backend/package.json
+++ b/wittleguys-backend/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "stripe": "^8.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "nodemailer": "^6.9.8"
+    "dotenv": "^16.0.3",
+    "nodemailer": "^6.9.1",
+    "stripe": "^12.9.0"
   }
 } 
