Add SEO: robots.txt and sitemap configuration, plus all recent site improvements

--- a/config.toml
+++ b/config.toml
@@ -53,3 +53,8 @@ languageCode = "en-us"
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true 
+
+# Sitemap configuration
+[sitemap]
+  changefreq = "weekly"
+  priority = 0.5 
